# TwitchCompilationCreator

./: .gitattributes  .gitignore  LICENSE  README.md  blocklist.json  config.py  main.py  pyproject.toml
assets/fortnite/: game_detection.h5  metadata_config.json
assets/leagueOfLegends/: game_detection.h5  metadata_config.json
assets/templates/: template_yt.txt  template_yt_title.txt
src/: APIHandler.py  Clip.py  ClipCompilationCreator.py  ClipHandler.py  MetadataHandler.py  parser.py  utils.py
