[tool.poetry]
name = "twitchcompilationcreator"
version = "1.0"
description = "A fully automated system that transforms Twitch clips into gaming compilations"
authors = ["Christian C., Moritz M., Luca S."]
[tool.poetry.dependencies]
python = "~=3.8"
requests = "~=2.25.0"
streamlink = "^=2.2.0"
tensorflow = "~=2.4.0"
moviepy = "~=1.0.0"
Jinja2 = "~=2.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
