[tool.poetry]
name = "twitchcompilationcreator"
version = "1.0"
description = "A fully automated system that transforms Twitch clips into gaming compilations"
authors = ["Christian C., Moritz M., Luca S."]
[tool.poetry.dependencies]
python = "~3.10"
requests = "~2.28.0"
streamlink = "^5.1.2"
tensorflow = "~2.11.0"
moviepy = "~1.0.0"
Jinja2 = "~3.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
